--- a/packages/manager/modules/pci/src/projects/project/storages/containers/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/translations/Messages_fr_FR.json
@@ -31,5 +31,7 @@
   "pci_projects_project_storages_containers_offer_standard_s3": "Standard - S3",
   "pci_projects_project_storages_containers_offer_swift": "Standard - Swift",
   "pci_projects_project_storages_containers_switch_to_private_label": "Passer en Privé",
-  "pci_projects_project_storages_containers_switch_to_public_label": "Passer en Public"
+  "pci_projects_project_storages_containers_switch_to_public_label": "Passer en Public",
+  "pci_projects_project_storages_containers_swift_containers_load_error": "Une erreur est survenue sur un ou plusieurs de vos conteneurs Swift. Veuillez réessayer ultérieurement.",
+  "pci_projects_project_storages_containers_s3_containers_load_error": "Une erreur est survenue sur un ou plusieurs de vos conteneurs S3 dans la région {{ regions }}. Veuillez réessayer ultérieurement."
 }
