--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_fr_FR.json
@@ -7,11 +7,14 @@
   "pci_database_add_step1_description": "Sélectionnez le type de base de données correspondant à vos besoins",
   "pci_database_add_step2_title": "Sélectionnez une offre",
   "pci_database_add_step3_title": "Sélectionnez une localisation",
-  "pci_database_add_step4_title": "Dimensionnement des nœuds",
+  "pci_database_add_step4_title": "Type de nœud",
+  "pci_database_add_step5_title": "Dimensionnement du cluster",
+  "pci_database_add_step6_title": "Configurez vos options",
+  "pci_database_add_step7_title": "Configuration du service de base de données",
   "pci_database_add_nodes_count": "Nombre de nœuds",
+  "pci_database_add_nodes_input_label": "Sélectionnez le nombre de nœuds du cluster",
   "pci_database_add_nodes_count_tooltip": "Le nombre de nœuds varie en fonction de l’offre de service choisie. Pendant la béta, ce nombre ne peut pas être modifié à la création.",
   "pci_database_add_select_flavor": "Sélectionnez le modèle des nœuds",
-  "pci_database_add_step5_title": "Configurez vos options",
   "pci_database_add_name": "Nommez votre service de base de données",
   "pci_database_add_network_mode_label": "Type de réseau",
   "pci_database_add_network_mode_public": "Réseau public (Internet) ",
@@ -25,7 +28,6 @@
   "pci_database_add_subnet_description": "Vous pouvez créer un sous-réseau, mais vous perdrez votre configuration actuelle.",
   "pci_database_add_subnet_add": "Créer un sous-réseau",
   "pci_database_add_subnet_loading": "Chargement de sous-réseaux",
-  "pci_database_add_step6_title": "Configuration du service de base de données",
   "pci_database_add_command_description": "La commande suivante vous permet de créer votre service grâce à notre API.",
   "pci_database_add_command_documentation_link": "Cliquez-ici pour accéder à la documentation.",
   "pci_database_add_create_database": "Créer un service de base de données",
@@ -48,21 +50,26 @@
   "pci_database_add_spec_flavor": "Modèle de nœud :",
   "pci_database_add_spec_flavor_CPU": "{{cpu}} CPU",
   "pci_database_add_spec_flavor_RAM": "{{ram}} RAM",
-  "pci_database_add_spec_storage": "Stockage :",
+  "pci_database_add_spec_cluster": "Cluster :",
   "pci_database_add_spec_network": "Type de réseau :",
   "pci_database_add_spec_network_name": "Réseau :",
   "pci_database_add_spec_network_subnetwork": "Sous-réseau :",
   "pci_database_add_spec_network_none": "Aucun",
   "pci_database_add_spec_order": "Commander",
-  "pci_database_add_spec_nodes": "{{min}} nœuds",
-  "pci_database_add_spec_nodes_single": "{{min}} nœud",
-  "pci_database_add_spec_nodes_range": "{{min}} nœuds inclus, jusqu'à {{max}} nœuds",
-  "pci_database_add_spec_nodes_range_single": "{{min}} nœud inclus, jusqu'à {{max}} nœuds",
+  "pci_database_add_spec_nodes": "{{nodes}} nœuds",
+  "pci_database_add_spec_nodes_single": "{{nodes}} nœud",
   "pci_database_add_show_command": "Voir l'équivalent API",
   "pci_database_add_spec_name_popover": "Le nom de votre cluster est généré automatiquement. Vous pourrez le modifier par la suite.",
   "pci_database_add_spec_logo_alt": "Logo du moteur",
   "pci_database_add_network_mode_helper": "Pour en savoir plus sur la configuration d'un réseau privé, consultez le guide : {{ link }}",
   "pci_database_add_network_mode_helper_link": "vRack Public Cloud",
   "pci_database_add_network_mode_public_popover": "Le réseau public permet la connexion depuis n'importe quelle IP source autorisée et connectée à Internet (votre ordinateur, un serveur distant, ...)",
-  "pci_database_add_network_mode_private_popover": "Le réseau privé ne permet pas la connectivité publique et n'autorise que les connexions en provenance de l'intérieur de votre vRack."
+  "pci_database_add_network_mode_private_popover": "Le réseau privé ne permet pas la connectivité publique et n'autorise que les connexions en provenance de l'intérieur de votre vRack.",
+  "pci_database_add_included_nodes_offer": "Votre offre {{offerName}} inclut {{offerNodes}} noeud(s).",
+  "pci_database_add_storage_sizing": "Stockage additionnel",
+  "pci_database_add_storage_sizing_offer": "Votre modèle de nœud {{flavorName}} inclut {{includedStorage}} de stockage auxquels vous pouvez ajouter {{addableStorage}} de stockage supplémentaire par pas de {{step}}.",
+  "pci_database_add_spec_storage_added": "{{total}} (dont {{included}} inclus)",
+  "pci_database_add_price_unit_month": "/ mois",
+  "pci_database_add_price_unit_hour": "/ heure",
+  "pci_database_add_price_unit_switch_label": "Afficher les prix au mois"
 }
