--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/plans-list/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/plans-list/translations/Messages_fr_FR.json
@@ -1,7 +1,7 @@
 {
   "pci_database_plans_list_spec_ram": "De {{min}} à {{max}} RAM",
   "pci_database_plans_list_spec_core": "De {{min}} à {{max}} vCores",
-  "pci_database_plans_list_spec_storage": "De {{min}} à {{max}} de stockage SSD",
+  "pci_database_plans_list_spec_storage": "De {{min}} à {{max}} de stockage",
   "pci_database_plans_list_spec_nodes": "{{min}} nœuds",
   "pci_database_plans_list_spec_nodes_single": "{{min}} nœud",
   "pci_database_plans_list_spec_nodes_range": "{{min}} nœuds inclus, jusqu'à {{max}} nœuds",
@@ -9,8 +9,9 @@
   "pci_database_plans_list_spec_backup": "Sauvegardes manuelles et automatiques",
   "pci_database_plans_list_spec_ram_unique": "{{ram}} RAM",
   "pci_database_plans_list_spec_core_unique": "{{core}} VCores",
-  "pci_database_plans_list_spec_storage_unique": "{{storage}} de stockage SSD",
+  "pci_database_plans_list_spec_storage_unique": "{{storage}} de stockage",
   "pci_database_plans_list_current_offer": "Offre actuelle",
   "pci_database_plans_list_spec_private_network": "Réseaux privés",
-  "pci_database_plans_list_spec_price_unit": " / heure"
+  "pci_database_plans_list_spec_price_unit_hour": " / heure",
+  "pci_database_plans_list_spec_price_unit_month": " / mois"
 }
