--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_it_IT.json
@@ -57,7 +57,7 @@
   "pci_database_add_spec_nodes_single": "{{nodes}} nodo",
   "pci_database_add_spec_nodes_range": "{{min}} nodi inclusi, fino a {{max}} nodi",
   "pci_database_add_spec_nodes_range_single": "{{min}} nodi inclusi, fino a {{max}} nodi",
-  "pci_database_add_show_command": "Visualizza l’API equivalente",
+  "pci_database_add_show_command": "API equivalenti e Terraform",
   "pci_database_add_spec_name_popover": "Il nome del cluster è generato automaticamente. Potrai modificarlo in seguito.",
   "pci_database_add_spec_logo_alt": "Logo del motore",
   "pci_database_add_network_mode_helper": "Per maggiori informazioni sulla configurazione di una rete privata, consulta la guida: {{ link }}",
