--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/translations/Messages_fr_FR.json
@@ -4,5 +4,6 @@
   "pci_database_flavors_list_header_storage": "Stockage utile",
   "pci_database_flavors_list_header_price_hour": "Coût / heure / nœud (estimé)",
   "pci_database_flavors_list_header_price_month": "Coût / mois / nœud (estimé)",
-  "pci_database_flavors_list_storage_range": "De {{min}} à {{max}}"
+  "pci_database_flavors_list_storage_range": "De {{min}} à {{max}}",
+  "pci_database_flavors_list_table_description": "Liste des types de nœuds"
 }
