--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/translations/Messages_fr_FR.json
@@ -7,5 +7,9 @@
   "pci_databases_general_information_upgrade_storage_warning": "Une fois la modification réalisée, vous ne pourrez plus revenir à un stockage inférieur.",
   "pci_databases_general_information_upgrade_storage_success": "Votre ajout de stockage supplémentaire a bien été pris en compte. Il sera effectif dans quelques minutes.",
   "pci_databases_general_information_upgrade_storage_error": "Votre ajout de stockage supplémentaire n’a pas été correctement effectué : {{message}}",
-  "pci_databases_general_information_upgrade_storage_processing": "Ajout de stockage supplémentaire..."
+  "pci_databases_general_information_upgrade_storage_processing": "Ajout de stockage supplémentaire...",
+  "pci_databases_general_information_upgrade_storage_summary_title": "Votre cluster",
+  "pci_databases_general_information_upgrade_storage_summary_storage": "Stockage",
+  "pci_databases_general_information_upgrade_storage_summary_price": "Prix",
+  "pci_databases_general_information_upgrade_storage_summary_price_hourly_unit": "/heure"
 }
