--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/translations/Messages_fr_FR.json
@@ -3,7 +3,7 @@
   "pci_databases_general_information_upgrade_storage_back": "Informations générales",
   "pci_databases_general_information_upgrade_storage_confirm": "Valider",
   "pci_databases_general_information_upgrade_storage_cancel": "Annuler",
-  "pci_databases_general_information_upgrade_storage_description": "Votre modèle de noeud {{flavorName}} inclut {{includedStorage}} auxquels vous pouvez ajouter {{addableStorage}} de stockage supplémentaire par pas de {{step}}.",
+  "pci_databases_general_information_upgrade_storage_description": "Votre modèle de noeud {{flavorName}} inclut {{includedStorage}} de stockage auxquels vous pouvez ajouter {{addableStorage}} de stockage supplémentaire par pas de {{step}}.",
   "pci_databases_general_information_upgrade_storage_warning": "Une fois la modification réalisée, vous ne pourrez plus revenir à un stockage inférieur.",
   "pci_databases_general_information_upgrade_storage_success": "Votre ajout de stockage supplémentaire a bien été pris en compte. Il sera effectif dans quelques minutes.",
   "pci_databases_general_information_upgrade_storage_error": "Votre ajout de stockage supplémentaire n’a pas été correctement effectué : {{message}}",
