fix(i18n): add missing translations [CDS 1993]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/components/ip/agoraOrder/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/ip/agoraOrder/translations/Messages_es_ES.json
@@ -1,5 +1,5 @@
 {
-  "ip_agora_table_header_offer": "Plan",
+  "ip_agora_table_header_offer": "Elija su plan",
   "ip_agora_table_header_quantity": "Cantidad",
   "ip_agora_table_header_country": "Localizada(s) en",
   "ip_agora_table_header_organisation": "Asociar una organización",
