sync: master to develop (#8570)
Signed-off-by: Anoop <anoop.n@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_en_GB.json
@@ -6,7 +6,7 @@
   "ip_service_error": "An error occurred while loading the  {{t0}} solution data.",
   "ip": "IP and Security",
   "ip_month": "month",
-  "ip_ip": "All IPs",
+  "ip_ip": "IP",
   "ip_iplb": "IP Load Balancing",
   "ip_ipv4": "IPv4",
   "ip_ipv6": "IPv6",
@@ -45,7 +45,7 @@
   "ip_block": "Block:",
   "ip_block_all": "All",
   "ip_block_order": "Order an IP block",
-  "ip_additional_order": "Order ",
+  "ip_additional_order": "Order additional IPs",
   "ip_search": "Searching...",
   "ip_table_empty": "No data to display",
   "ip_table_search": "Searching....",
@@ -78,18 +78,18 @@
   "ip_filter_services__ALL": "All services",
   "ip_filter_services__ALERTS": "Services under alert",
   "ip_filter_services__PARK": "IP parking",
-  "ip_filter_services__FAILOVER": "Additional IP",
+  "ip_filter_services__FAILOVER": "Failover IP",
   "ip_filter_services_title_OTHER": "Others",
   "ip_filter_services_title_CDN": "CDN",
-  "ip_filter_services_title_DEDICATED": "Dedicated servers",
+  "ip_filter_services_title_DEDICATED": "Dedicated Servers",
   "ip_filter_services_title_HOSTED_SSL": "Hosted SSL",
-  "ip_filter_services_title_PRIVATE_CLOUD": "Hosted Private Cloud (VMware)",
+  "ip_filter_services_title_PRIVATE_CLOUD": "Dedicated Cloud",
   "ip_filter_services_title_VPS": "Virtual private servers",
-  "ip_filter_services_title_VRACK": "vRack private network",
-  "ip_filter_services_title_XDSL": "Internet Services",
+  "ip_filter_services_title_VRACK": "vRack",
+  "ip_filter_services_title_XDSL": "xDSL",
   "ip_filter_services_title_MAIL": "Mail servers",
-  "ip_filter_services_title_CLOUD": "Public Cloud",
-  "ip_filter_services_title_IP_LOAD_BALANCING": "OVHcloud Load Balancer",
+  "ip_filter_services_title_CLOUD": "Cloud",
+  "ip_filter_services_title_IP_LOAD_BALANCING": "IP Load Balancing",
   "ip_filter_services_CDN": "CDN only",
   "ip_filter_services_DEDICATED": "Dedicated Servers only",
   "ip_filter_services_HOSTED_SSL": "Hosted SSL only",
@@ -115,12 +115,12 @@
   "ip_table_header_alerts": "Alerts",
   "ip_table_header_visiblecols_btn": "Configure",
   "ip_table_header_visiblecols": "Visible columns",
-  "ip_agora_table_header_offer": "Choose your solution",
+  "ip_agora_table_header_offer": "Solution ",
   "ip_agora_table_header_quantity": "Quantity",
   "ip_agora_table_header_country": "Located in",
-  "ip_agora_table_header_organisation": "Link an organisation",
+  "ip_agora_table_header_organisation": "Organisation",
   "ip_table_firewall": "Firewall",
-  "ip_table_manage_mac": "Change your virtual MAC address",
+  "ip_table_manage_mac": "Modify Virtual MAC",
   "ip_table_manage_mitigation_DEFAULT_to_PERMANENT": "Mitigation: permanent mode",
   "ip_table_manage_mitigation_PERMANENT_to_AUTO": "Mitigation: auto mode ",
   "ip_table_manage_mitigation_stats": "Statistics",
@@ -399,12 +399,12 @@
   "ip_firewall_rule_flags_established": "ESTABLISHED",
   "ip_firewall_rule_flags_NONE": "None",
   "ip_firewall_rule_flags_none": "None",
-  "ip_table_manage_delete_ipblock": "Delete ",
+  "ip_table_manage_delete_ipblock": "Delete the Failover IP",
   "ip_table_manage_delete_ipblock_question": "For security purposes, we will send  out an email to confirm the deletion of your IP.",
   "ip_table_manage_delete_ipblock_question2": "Do you want to continue with the cancellation of the IP {{t0}}?",
   "ip_table_manage_delete_ipblock_success": "An email has been just sent out to confirm the cancellation.",
   "ip_table_manage_delete_ipblock_failure": "An error occurred on requesting to delete the IP {{t0}}.",
-  "ip_table_manage_move_ipblock": "Move ",
+  "ip_table_manage_move_ipblock": "Move the failover IP",
   "ip_table_manage_move_ipblock_question": "Select the destination service for the IP <b>{{t0}}</b>:",
   "ip_table_manage_move_ipblock_resume": "Are you sure you want to move the <b>{{t0}}</b> IP to <b>{{t1}}</b>",
   "ip_table_manage_move_ipblock_from": "From",
@@ -429,7 +429,7 @@
   "ip_servicetype__PARK": "Parking",
   "ip_order_quota_full": "You have reached the maximum quota of IPs for this server.",
   "ip_order_noservices": "You don't have any services available to order.",
-  "ip_order_step1_question": "Select the service for which you want to order ",
+  "ip_order_step1_question": "Select which service you want to purchase additional IPs for:",
   "ip_order_checkservice": "Checking eligibility...",
   "ip_order_loading_error": "An error occurred on loading the IP order information.",
   "ip_order_loading_error2": "This action requires verification or cannot be validated at this time. ({{t0}})",
@@ -483,7 +483,7 @@
   "ip_order_finish_error": "An error occurred on ordering additional IPs.",
   "ip_order_free_activation_fee": "If you have a server with free IPs included, you will not be billed these activation fees following the renewal of your server.",
   "ip_organisation_title": "Manage my organisations",
-  "ip_organisation_button": "Manage my organisation",
+  "ip_organisation_button": "Manage my organisations",
   "ip_organisation_table_organisation": "Organisation",
   "ip_organisation_table_type": "Type",
   "ip_organisation_table_lastname": "Surname",
