--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/service-integration/add/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/service-integration/add/translations/Messages_es_ES.json
@@ -15,5 +15,14 @@
   "pci_databases_service_integration_add_error_no_available_service_2_public": "que tenga como motor una de las siguientes opciones y un tipo de red pública: ",
   "pci_databases_service_integration_add_error_no_available_service_2_private": "que tenga como motor una de las siguientes opciones y un tipo de red privada: ",
   "pci_databases_service_integration_add_error_no_available_service_link": "añada un servicio",
-  "pci_databases_service_integration_add_string_parameter_description": "Solo debe contener números, letras, guiones, guiones bajos o puntos."
+  "pci_databases_service_integration_add_string_parameter_description": "Solo debe contener números, letras, guiones, guiones bajos o puntos.",
+  "pci_databases_service_integration_postgresqlmetrics": "Almacenar las métricas en PostgreSQL",
+  "pci_databases_service_integration_m3dbmetrics": "Almacenar las métricas en M3DB",
+  "pci_databases_service_integration_kafkalogs": "Enviar los logs a un cluster Kafka",
+  "pci_databases_service_integration_opensearchlogs": "Enviar los logs a OpenSearch",
+  "pci_databases_service_integration_grafanadashboard": "Visualizar las métricas en un dashboard Grafana",
+  "pci_databases_service_integration_grafanadatasource": "Visualizar los datos en Grafana",
+  "pci_databases_service_integration_m3aggregator": "Agregar los datos con M3 Aggregator",
+  "pci_databases_service_integration_kafkamirrormaker": "Sincronizar los topics entre clusters Kafka",
+  "pci_databases_service_integration_kafkaconnect": "Conectar sistemas externos a un cluster Kafka"
 }
