fix(i18n): add missing translations [CDS 2009]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_de_DE.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_de_DE.json
@@ -56,7 +56,7 @@
   "sidebar_pci_quota_regions": "Quota and Regions",
   "sidebar_pci_ssh_keys": "SSH-Schlüssel",
   "sidebar_pci_billing": "Abrechnung",
-  "sidebar_pci_credits_vouchers": "Guthaben und Gutscheine",
+  "sidebar_pci_credits_vouchers": "Guthaben &amp; Gutscheine",
   "sidebar_pci_contacts_rights": "Kontakt &amp; Rechte",
   "sidebar_pci_project_settings": "Project Settings",
   "sidebar_storage": "Speicherdienste",
