feat(kubernetes.node): add kubernetes node status labels
ref: MANAGER-10453
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/kubernetes/details/node-pool/nodes/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/kubernetes/details/node-pool/nodes/translations/Messages_fr_FR.json
@@ -35,6 +35,8 @@
   "kube_nodes_status_RESETTING": "En cours de réinitialisation",
   "kube_nodes_status_RESIZING": "Redimensionnement",
   "kube_nodes_status_REDEPLOYING": "Application des changements",
+  "kube_nodes_status_UPSCALING": "Upscaling",
+  "kube_nodes_status_DOWNSCALING": "Downscaling",
   "kube_nodes_instances_error": "Une erreur s'est produite lors du chargement des détails de facturation : {{ message }}",
   "kube_nodes_billing_type": "Type de facturation",
   "kube_nodes_billing_monthly": "Mensuelle",
