--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_fr_FR.json
@@ -32,5 +32,6 @@
   "siret_manual_company_legal_form_SCA": "Société en commandite par actions (SCA)",
   "siret_manual_company_legal_form_SCOP": "Société coopérative de production (Scop)",
   "siret_manual_registration_date": "Date d'immatriculation",
+  "siret_manual_registration_date_placeholder": "jj/mm/aaaa",
   "siret_update_search_assistant": "Assistant de recherche"
 }
