feat(storage.cold-archive): update user association button label
ref: MANAGER-10608
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_fr_FR.json
@@ -6,7 +6,7 @@
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select_list_has_credential": "Credentials générés",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select_list_has_no_credential": "Pas de credentials",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select_field_user_cta_cancel": "Annuler",
-  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select_field_user_cta_linked": "Associer",
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select_field_user_cta_linked": "Voir les credentials",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_create": "Créer un nouvel utilisateur",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_create_field_user_label": "Description de l'utilisateur",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_create_field_user_cta_create": "Créer",
