--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/archive/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/archive/translations/Messages_fr_FR.json
@@ -3,6 +3,6 @@
   "pci_projects_project_storages_cold_archive_containers_container_archive_description": "Vous êtez sur le point d'archiver votre conteneur {{ containerName }}.",
   "pci_projects_project_storages_cold_archive_containers_container_archive_submit_label": "Confirmer",
   "pci_projects_project_storages_cold_archive_containers_container_archive_cancel_label": "Annuler",
-  "pci_projects_project_storages_cold_archive_containers_container_archive_success_message": "Le conteneur {{ containerName }} a été archivé.",
+  "pci_projects_project_storages_cold_archive_containers_container_archive_success_message": "Le conteneur {{ containerName }} est en cours d'archivage.",
   "pci_projects_project_storages_cold_archive_containers_container_archive_error_message": "Une erreur est survenue lors de l'archivage du conteneur {{ containerName }} : {{ message }}."
 }
