--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/restore/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/restore/translations/Messages_fr_FR.json
@@ -3,6 +3,6 @@
   "pci_projects_project_storages_cold_archive_containers_container_restore_description": "Vous êtez sur le point de restaurer votre conteneur {{ containerName }}.",
   "pci_projects_project_storages_cold_archive_containers_container_restore_submit_label": "Confirmer",
   "pci_projects_project_storages_cold_archive_containers_container_restore_cancel_label": "Annuler",
-  "pci_projects_project_storages_cold_archive_containers_container_restore_success_message": "Le conteneur {{ containerName }} a été restauré.",
+  "pci_projects_project_storages_cold_archive_containers_container_restore_success_message": "Le conteneur {{ containerName }} est en cours de restauration.",
   "pci_projects_project_storages_cold_archive_containers_container_restore_error_message": "Une erreur est survenue lors de la restauration du conteneur {{ containerName }} : {{ message }}."
 }
