--- a/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_es_ES.json
@@ -36,5 +36,8 @@
   "pci_projects_project_public_gateways_add_modal_add_private_network_error": "Se ha producido un error al crear la red privada: {{ message }}.",
   "pci_projects_project_public_gateways_add_success": "Se ha creado un nuevo servicio Gateway.",
   "pci_projects_project_public_gateways_add_error": "Se ha producido un error al crear el servicio Gateway: {{ message }}",
-  "pci_projects_project_public_gateways_add_creating_wait_message": "Creando el servicio Gateway... La configuración de todos los componentes puede tardar algunos minutos. Por favor, no cierre ni actualice esta página, ya que podría afectar al proceso de creación."
+  "pci_projects_project_public_gateways_add_creating_wait_message": "Creando el servicio Gateway... La configuración de todos los componentes puede tardar algunos minutos. Por favor, no cierre ni actualice esta página, ya que podría afectar al proceso de creación.",
+  "pci_projects_project_public_gateways_add_region_activate_line1": "Esta región todavía no está activada. Puede activarla en la pestaña ",
+  "pci_projects_project_public_gateways_add_region_activate_line2": "«Quota and Localisation» ",
+  "pci_projects_project_public_gateways_add_region_activate_line3": "y, a continuación, crear su Gateway."
 }
