--- a/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_en_GB.json
@@ -36,5 +36,8 @@
   "pci_projects_project_public_gateways_add_modal_add_private_network_error": "An error has occurred modifying the private network: {{ message }}",
   "pci_projects_project_public_gateways_add_success": "A new Gateway has been created.",
   "pci_projects_project_public_gateways_add_error": "An error has occurred creating the Gateway: {{message}}",
-  "pci_projects_project_public_gateways_add_creating_wait_message": "Creating your Gateway. It may take a few minutes to configure all the components. Please do not leave or refresh this page as this may impact the creation process."
+  "pci_projects_project_public_gateways_add_creating_wait_message": "Creating your Gateway. It may take a few minutes to configure all the components. Please do not leave or refresh this page as this may impact the creation process.",
+  "pci_projects_project_public_gateways_add_region_activate_line1": "This region has not been activated yet. You can activate it on the ",
+  "pci_projects_project_public_gateways_add_region_activate_line2": "Quota and location tab, ",
+  "pci_projects_project_public_gateways_add_region_activate_line3": "then return and create your Gateway."
 }
