--- a/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_it_IT.json
@@ -36,5 +36,8 @@
   "pci_projects_project_public_gateways_add_modal_add_private_network_error": "Si è verificato un errore durante la modifica della rete privata: {{ message }}",
   "pci_projects_project_public_gateways_add_success": "Il nuovo Gateway è stato creato correttamente.",
   "pci_projects_project_public_gateways_add_error": "Si è verificato un errore durante la creazione del Gateway: {{ message }}",
-  "pci_projects_project_public_gateways_add_creating_wait_message": "Creazione del Gateway in corso... La configurazione di tutti i componenti potrebbe richiedere alcuni minuti. Non chiudere o aggiornare la pagina: questa azione potrebbe avere un impatto sul processo di creazione."
+  "pci_projects_project_public_gateways_add_creating_wait_message": "Creazione del Gateway in corso... La configurazione di tutti i componenti potrebbe richiedere alcuni minuti. Non chiudere o aggiornare la pagina: questa azione potrebbe avere un impatto sul processo di creazione.",
+  "pci_projects_project_public_gateways_add_region_activate_line1": "Questa Region non è ancora attiva. È possibile attivarla sulla scheda ",
+  "pci_projects_project_public_gateways_add_region_activate_line2": "Quota e localizzazione ",
+  "pci_projects_project_public_gateways_add_region_activate_line3": "e poi creare il tuo Gateway."
 }
