--- a/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_pt_PT.json
@@ -36,5 +36,8 @@
   "pci_projects_project_public_gateways_add_modal_add_private_network_error": "Ocorreu um erro ao criar a rede privada: {{ message }}",
   "pci_projects_project_public_gateways_add_success": "Foi criado com sucesso um novo Gateway.",
   "pci_projects_project_public_gateways_add_error": "Ocorreu um erro aquando da criação do Gateway: {{ message }}",
-  "pci_projects_project_public_gateways_add_creating_wait_message": "O seu Gateway está a ser criado. A configuração de todos os componentes pode demorar alguns minutos. Por favor, não saia ou atualize esta página: tais ações podem afetar o processo de criação."
+  "pci_projects_project_public_gateways_add_creating_wait_message": "O seu Gateway está a ser criado. A configuração de todos os componentes pode demorar alguns minutos. Por favor, não saia ou atualize esta página: tais ações podem afetar o processo de criação.",
+  "pci_projects_project_public_gateways_add_region_activate_line1": "Esta região ainda não está ativa. Pode ativá-la no separador ",
+  "pci_projects_project_public_gateways_add_region_activate_line2": "Limites e localizações ",
+  "pci_projects_project_public_gateways_add_region_activate_line3": "e depois voltar para criar o seu Gateway."
 }
